third_party/move/move-compiler-v2/tests/lambda/inline-parity/shadowing_unused_nodecl.lambda.exp

Diagnostics:
warning: Unused parameter `z`. Consider removing or prefixing with an underscore: `_z`
  ┌─ tests/lambda/inline-parity/shadowing_unused_nodecl.move:6:35
  │
6 │     public fun quux(f:|u64, u64|, z: u64) {
  │                                   ^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/shadowing_unused_nodecl.move:13:14
   │
13 │         quux(|a, b| f(a, b), z);
   │              ^^^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/shadowing_unused_nodecl.move:19:13
   │
19 │           foo(|y, _q| {
   │ ╭─────────────^
20 │ │             _x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
21 │ │                     // have the value 1.
22 │ │         }, z);
   │ ╰─────────^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/shadowing_unused_nodecl.move:29:14
   │
29 │           quux(|y, _q| {
   │ ╭──────────────^
30 │ │             _x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
31 │ │                     // have the value 1.
32 │ │         }, z);
   │ ╰─────────^
